@@ -80,19 +80,27 @@ print.raster <- function(x, ...) {
 # Non-standard because raster is ROW-wise
 # Try to piggy-back on existing methods as much as possible
 # IGNORE 'drop'
-`[.raster` <- function(x, i, j, ..., drop) {
+`[.raster` <- function(x, i, j, ...) {
     m <- as.matrix(x)
-    if (missing(j))
-        subset <- m[i, drop=FALSE]
+    if (missing(i) && missing(j))
+        stop('No valid indices')
+    if (missing(i))
+        subset <- m[1:nrow(m), j]        
+    else if (missing(j))
+        subset <- m[i, 1:ncol(m)]
     else
-        subset <- m[i, j, drop=FALSE]
+        subset <- m[i, j]
     as.raster(subset)
 }
 
 `[<-.raster` <- function(x, i, j, value) {
     m <- as.matrix(x)
-    if (missing(j))
-        m[i] <- value
+    if (missing(i) && missing(j))
+        stop('No valid indices')
+    if (missing(i))
+        m[1:nrow(m), j] <- value
+    else if (missing(j))
+        m[i, 1:ncol(m)] <- value
     else
         m[i, j] <- value
     as.raster(m)
